<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
android:background="#ed7878">

<TextView
    android:text="@string/header"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/textView" />

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView"
    android:layout_marginTop="10dp"
    android:id="@+id/linear1">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_editText"
        android:hint="@string/name_edit"
        android:layout_weight="1"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:id="@+id/sauceToggle"
        android:checked="false" />
</LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linear1"
    android:id="@+id/linear2"
    android:layout_marginTop="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/pizza_text"
        android:layout_weight="1"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/crust_type"
        android:orientation="horizontal"
        android:layout_weight="1">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza1_radio"
            android:id="@+id/radioButton1"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza2_radio"
            android:id="@+id/radioButton2"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza3_radio"
            android:id="@+id/radioButton3"
            android:layout_weight="1"/>
    </RadioGroup>
</LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_below="@+id/linear2"
    android:id="@+id/linear3">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pepperoni_check"
        android:id="@+id/checkBox1"
        android:layout_weight="1"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jalapenos_check"
        android:id="@+id/checkBox2"
        android:layout_weight="1" />
</LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linear3"
    android:id="@+id/linear4">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacon_check"
        android:id="@+id/checkBox3"
        android:layout_weight="1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/canadian_check"
        android:id="@+id/checkBox4"
        android:layout_weight="1" />
</LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linear4"
    android:id="@+id/linear5">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/spinner"
        android:entries="@array/Size" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="110dp"
        android:text="@string/gluten_switch"
        android:id="@+id/switch1" />
</LinearLayout>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mood_button"
    android:id="@+id/button"
    android:layout_below="@+id/linear5"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="5dp"
    android:onClick="findPizza" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:layout_toLeftOf="@+id/button"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/pizza_image"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/feeling"
    android:id="@+id/displayPizza"
    android:layout_below="@+id/button"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="5dp"
    android:textSize="20sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find Pizza"
        android:id="@+id/findPizza"
        android:layout_below="@+id/imageView"
        android:layout_toRightOf="@+id/button"
        android:onClick="findPlace"
        android:layout_toEndOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/pizzaPlaceText"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/displayPizza"
        android:layout_alignEnd="@+id/displayPizza" />


</RelativeLayout>
